# spectandi

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
src/spectandi/: __init__.py  _exporter.py  core.py
